--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "aos": "^2.3.4",
     "gsap": "^3.10.4",
-    "vue": "^3.2.25"
+    "vue": "^3.2.25",
+    "vue-slick-carousel": "^1.0.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
