--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "aos": "^2.3.4",
     "gsap": "^3.10.4",
     "vue": "^3.2.25",
-    "vue-slick-carousel": "^1.0.6"
+    "vue3-carousel": "^0.1.40"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
